[gd_scene load_steps=31 format=2]

[ext_resource path="res://DriveInScreen/SelectableTools/SelectableTool.tscn" type="PackedScene" id=1]
[ext_resource path="res://Patients/PatientGenerator.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Background/backwall Merged.PNG" type="Texture" id=3]
[ext_resource path="res://Scenes/Background/table.PNG" type="Texture" id=4]
[ext_resource path="res://Scenes/Background/wall right.PNG" type="Texture" id=5]
[ext_resource path="res://Scenes/Background/wall left.PNG" type="Texture" id=6]
[ext_resource path="res://Scenes/WaitingRoom.gd" type="Script" id=7]
[ext_resource path="res://SurgeryScreen/SurgeryContainer.tscn" type="PackedScene" id=8]
[ext_resource path="res://Ui/MoneyLabelContainer.tscn" type="PackedScene" id=9]
[ext_resource path="res://PermanentMarker-Regular.ttf" type="DynamicFontData" id=10]
[ext_resource path="res://Scenes/DayEndScreen.gd" type="Script" id=11]
[ext_resource path="res://DriveInScreen/AfflictionDialog/9slice.png" type="Texture" id=12]
[ext_resource path="res://Ui/WaitingRoom.tres" type="DynamicFont" id=13]
[ext_resource path="res://DrBook/DrBook.tscn" type="PackedScene" id=14]
[ext_resource path="res://DrBook/DrBook Icon.png" type="Texture" id=15]
[ext_resource path="res://Ui/ShopItem.tscn" type="PackedScene" id=16]
[ext_resource path="res://Ui/ButtonStyle.tres" type="StyleBox" id=17]
[ext_resource path="res://Scenes/ShopContainer.gd" type="Script" id=18]
[ext_resource path="res://Assets/Audio/Flatline.wav" type="AudioStream" id=19]

[sub_resource type="DynamicFont" id=1]
size = 60
outline_size = 7
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_char = 10
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=2]
size = 75
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_char = 5
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=3]
size = 50
font_data = ExtResource( 10 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.223529, 0.262745, 0.34902, 1 )

[sub_resource type="DynamicFont" id=5]
size = 75
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_char = 5
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=6]
size = 50
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_char = 5
font_data = ExtResource( 10 )

[sub_resource type="CircleShape2D" id=7]
radius = 473.185

[sub_resource type="Animation" id=8]
resource_name = "FadeIn"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.572549 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("VBoxContainer/OperationBotched:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("VBoxContainer/PatientDied:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("VBoxContainer/PatientDied:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 1, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("VBoxContainer/OperationBotched:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 1, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("VBoxContainer/MarginContainer/BotchButton:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("VBoxContainer/MarginContainer/BotchButton:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 1, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("VBoxContainer/MarginContainer/BotchButton:mouse_filter")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 1, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 2, 0 ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("AudioStreamPlayer:playing")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("AudioStreamPlayer:volume_db")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -6.38, -11.332 ]
}

[sub_resource type="Animation" id=9]
resource_name = "FadeOut"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="DynamicFont" id=10]
size = 75
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_char = 5
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=11]
size = 40
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_char = 5
font_data = ExtResource( 10 )

[node name="WaitingRoom" type="Node2D"]
script = ExtResource( 7 )

[node name="Background" type="Sprite" parent="."]
texture = ExtResource( 3 )
centered = false

[node name="WallLeft" type="Sprite" parent="."]
texture = ExtResource( 6 )
centered = false

[node name="WallRight" type="Sprite" parent="."]
texture = ExtResource( 5 )
centered = false

[node name="Table" type="Sprite" parent="."]
z_index = 1
texture = ExtResource( 4 )
centered = false

[node name="PatientGenerator" parent="." instance=ExtResource( 2 )]
position = Vector2( 960, 600 )
bounds = 700
y_bounds = 50

[node name="Scalpel" parent="." instance=ExtResource( 1 )]
position = Vector2( 432, 944 )

[node name="Bandage" parent="." instance=ExtResource( 1 )]
position = Vector2( 1728, 880 )
tool_type = 1

[node name="SutureNeedle" parent="." instance=ExtResource( 1 )]
position = Vector2( 1424, 928 )
tool_type = 6

[node name="Syringe" parent="." instance=ExtResource( 1 )]
position = Vector2( 888, 952 )
tool_type = 4

[node name="BiopsyNeedle" parent="." instance=ExtResource( 1 )]
position = Vector2( 1152, 856 )
rotation = 0.669688
tool_type = 8

[node name="Pipette" parent="." instance=ExtResource( 1 )]
position = Vector2( 672, 848 )
tool_type = 5

[node name="Rx" parent="." instance=ExtResource( 1 )]
position = Vector2( 184, 832 )
rotation = 0.43884
tool_type = 7

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="GreyOut" type="ColorRect" parent="CanvasLayer"]
visible = false
margin_right = 1920.0
margin_bottom = 1080.0
color = Color( 0.105882, 0.105882, 0.105882, 0.462745 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeLabel" type="Label" parent="CanvasLayer"]
anchor_left = 0.993
anchor_top = 0.021
anchor_right = 1.0
anchor_bottom = 0.021
margin_left = -159.68
margin_top = 1.32
margin_right = 0.320068
margin_bottom = 88.32
custom_fonts/font = SubResource( 1 )
text = "3:00"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SurgeryContainer" parent="CanvasLayer" instance=ExtResource( 8 )]
visible = false

[node name="MoneyLabelContainer" parent="CanvasLayer" instance=ExtResource( 9 )]
mouse_filter = 2

[node name="DayEndScreen" type="Control" parent="CanvasLayer"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/DayEndScreen"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
custom_constants/margin_right = 0
custom_constants/margin_top = 0
custom_constants/margin_left = 0
custom_constants/margin_bottom = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="CanvasLayer/DayEndScreen/MarginContainer"]
margin_right = 840.0
margin_bottom = 676.0
texture = ExtResource( 12 )
patch_margin_left = 9
patch_margin_top = 11
patch_margin_right = 10
patch_margin_bottom = 9

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/DayEndScreen/MarginContainer"]
margin_right = 840.0
margin_bottom = 676.0
mouse_filter = 2
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/DayEndScreen/MarginContainer/MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 820.0
margin_bottom = 656.0
mouse_filter = 2
custom_constants/separation = 10

[node name="DayXOver" type="Label" parent="CanvasLayer/DayEndScreen/MarginContainer/MarginContainer/VBoxContainer"]
margin_right = 800.0
margin_bottom = 108.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "DAY 1 OVER"
align = 1

[node name="MoneyEarned" type="Label" parent="CanvasLayer/DayEndScreen/MarginContainer/MarginContainer/VBoxContainer"]
margin_top = 118.0
margin_right = 800.0
margin_bottom = 190.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Money Earned: $100"
align = 1

[node name="PatientsTreated" type="Label" parent="CanvasLayer/DayEndScreen/MarginContainer/MarginContainer/VBoxContainer"]
margin_top = 200.0
margin_right = 800.0
margin_bottom = 272.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Patients Treated: 10"
align = 1

[node name="PatientsUntreated" type="Label" parent="CanvasLayer/DayEndScreen/MarginContainer/MarginContainer/VBoxContainer"]
margin_top = 282.0
margin_right = 800.0
margin_bottom = 354.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Patients Untreated: 2"
align = 1

[node name="OperationsBotched" type="Label" parent="CanvasLayer/DayEndScreen/MarginContainer/MarginContainer/VBoxContainer"]
margin_top = 364.0
margin_right = 800.0
margin_bottom = 436.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Operations Botched: 1"
align = 1

[node name="DaysRemaining" type="Label" parent="CanvasLayer/DayEndScreen/MarginContainer/MarginContainer/VBoxContainer"]
margin_top = 446.0
margin_right = 800.0
margin_bottom = 518.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Days Remaining: 6"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/DayEndScreen/MarginContainer/MarginContainer/VBoxContainer"]
margin_top = 528.0
margin_right = 800.0
margin_bottom = 636.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 800, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20
alignment = 1

[node name="ShopButton" type="Button" parent="CanvasLayer/DayEndScreen/MarginContainer/MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 318.0
margin_bottom = 108.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = ExtResource( 17 )
custom_styles/focus = ExtResource( 17 )
custom_styles/disabled = ExtResource( 17 )
custom_styles/normal = ExtResource( 17 )
custom_fonts/font = ExtResource( 13 )
custom_colors/font_color = Color( 0.156863, 0.52549, 0.129412, 1 )
custom_constants/hseparation = 0
text = "SHOP"
expand_icon = true

[node name="NextDay" type="Button" parent="CanvasLayer/DayEndScreen/MarginContainer/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 338.0
margin_right = 800.0
margin_bottom = 108.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 1.45
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = ExtResource( 17 )
custom_styles/focus = ExtResource( 17 )
custom_styles/disabled = ExtResource( 17 )
custom_styles/normal = ExtResource( 17 )
custom_fonts/font = ExtResource( 13 )
custom_colors/font_color = Color( 0.156863, 0.52549, 0.129412, 1 )
text = "CONTINUE"
expand_icon = true

[node name="ShopContainer" type="MarginContainer" parent="CanvasLayer"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -500.0
margin_top = -360.0
margin_right = 500.0
margin_bottom = 360.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 0
custom_constants/margin_top = 0
custom_constants/margin_left = 0
custom_constants/margin_bottom = 0
script = ExtResource( 18 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="CanvasLayer/ShopContainer"]
margin_right = 1000.0
margin_bottom = 720.0
texture = ExtResource( 12 )
patch_margin_left = 9
patch_margin_top = 11
patch_margin_right = 10
patch_margin_bottom = 9

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/ShopContainer"]
margin_right = 1000.0
margin_bottom = 720.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/ShopContainer/MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 980.0
margin_bottom = 700.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 40
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/ShopContainer/MarginContainer/VBoxContainer"]
margin_right = 960.0
margin_bottom = 108.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.42
alignment = 1

[node name="Label" type="Label" parent="CanvasLayer/ShopContainer/MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 956.0
margin_bottom = 108.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 6.73
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.298039, 0.611765, 0.168627, 1 )
text = "SHOP"
align = 1
valign = 1

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/ShopContainer/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 960.0
margin_right = 960.0
margin_bottom = 108.0
custom_constants/margin_right = 7
custom_constants/margin_left = -191

[node name="BackButton" type="Button" parent="CanvasLayer/ShopContainer/MarginContainer/VBoxContainer/HBoxContainer/MarginContainer"]
margin_left = -191.0
margin_top = 18.0
margin_right = -7.0
margin_bottom = 90.0
size_flags_horizontal = 3
size_flags_vertical = 4
custom_styles/hover = ExtResource( 17 )
custom_styles/pressed = ExtResource( 17 )
custom_styles/focus = ExtResource( 17 )
custom_styles/disabled = ExtResource( 17 )
custom_styles/normal = ExtResource( 17 )
custom_fonts/font = SubResource( 6 )
text = "BACK"

[node name="FirstRowContainer" type="MarginContainer" parent="CanvasLayer/ShopContainer/MarginContainer/VBoxContainer"]
margin_top = 148.0
margin_right = 960.0
margin_bottom = 394.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 125
custom_constants/margin_left = 125

[node name="FirstRow" type="HBoxContainer" parent="CanvasLayer/ShopContainer/MarginContainer/VBoxContainer/FirstRowContainer"]
margin_left = 125.0
margin_right = 835.0
margin_bottom = 246.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 25
alignment = 1

[node name="ShopItem0" parent="CanvasLayer/ShopContainer/MarginContainer/VBoxContainer/FirstRowContainer/FirstRow" instance=ExtResource( 16 )]
margin_right = 220.0
margin_bottom = 246.0
size_flags_horizontal = 7
size_flags_vertical = 7

[node name="ShopItem1" parent="CanvasLayer/ShopContainer/MarginContainer/VBoxContainer/FirstRowContainer/FirstRow" instance=ExtResource( 16 )]
margin_left = 245.0
margin_right = 465.0
margin_bottom = 246.0
size_flags_horizontal = 7
size_flags_vertical = 7

[node name="ShopItem2" parent="CanvasLayer/ShopContainer/MarginContainer/VBoxContainer/FirstRowContainer/FirstRow" instance=ExtResource( 16 )]
margin_left = 490.0
margin_right = 710.0
margin_bottom = 246.0
size_flags_horizontal = 7
size_flags_vertical = 7

[node name="SecondRowContainer" type="MarginContainer" parent="CanvasLayer/ShopContainer/MarginContainer/VBoxContainer"]
margin_top = 434.0
margin_right = 960.0
margin_bottom = 680.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 25
custom_constants/margin_left = 25

[node name="SecondRow" type="HBoxContainer" parent="CanvasLayer/ShopContainer/MarginContainer/VBoxContainer/SecondRowContainer"]
margin_left = 25.0
margin_right = 935.0
margin_bottom = 246.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 25
alignment = 1

[node name="ShopItem3" parent="CanvasLayer/ShopContainer/MarginContainer/VBoxContainer/SecondRowContainer/SecondRow" instance=ExtResource( 16 )]
margin_right = 208.0
margin_bottom = 246.0

[node name="ShopItem4" parent="CanvasLayer/ShopContainer/MarginContainer/VBoxContainer/SecondRowContainer/SecondRow" instance=ExtResource( 16 )]
margin_left = 233.0
margin_right = 442.0
margin_bottom = 246.0

[node name="ShopItem5" parent="CanvasLayer/ShopContainer/MarginContainer/VBoxContainer/SecondRowContainer/SecondRow" instance=ExtResource( 16 )]
margin_left = 467.0
margin_right = 676.0
margin_bottom = 246.0

[node name="ShopItem6" parent="CanvasLayer/ShopContainer/MarginContainer/VBoxContainer/SecondRowContainer/SecondRow" instance=ExtResource( 16 )]
margin_left = 701.0
margin_right = 910.0
margin_bottom = 246.0

[node name="DrBook" type="Sprite" parent="CanvasLayer"]
position = Vector2( 79.0443, 146.316 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 15 )

[node name="Area2D" type="Area2D" parent="CanvasLayer/DrBook"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CanvasLayer/DrBook/Area2D"]
shape = SubResource( 7 )

[node name="BotchInfoContainer" type="MarginContainer" parent="CanvasLayer"]
pause_mode = 2
visible = false
modulate = Color( 1, 1, 1, 0.572549 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -960.0
margin_top = -540.0
margin_right = 960.0
margin_bottom = 540.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="CanvasLayer/BotchInfoContainer"]
stream = ExtResource( 19 )
volume_db = -6.38

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/BotchInfoContainer"]
anims/FadeIn = SubResource( 8 )
anims/FadeOut = SubResource( 9 )

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/BotchInfoContainer"]
margin_right = 1920.0
margin_bottom = 1080.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/BotchInfoContainer"]
margin_right = 1920.0
margin_bottom = 1080.0
custom_constants/separation = 150
alignment = 1

[node name="OperationBotched" type="Label" parent="CanvasLayer/BotchInfoContainer/VBoxContainer"]
visible = false
margin_top = 253.0
margin_right = 1920.0
margin_bottom = 361.0
custom_fonts/font = SubResource( 10 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "Operation Botched!"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PatientDied" type="Label" parent="CanvasLayer/BotchInfoContainer/VBoxContainer"]
visible = false
margin_top = 511.0
margin_right = 1920.0
margin_bottom = 569.0
custom_fonts/font = SubResource( 11 )
text = "The Patient Didn't Make It"
align = 1
valign = 1

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/BotchInfoContainer/VBoxContainer"]
margin_top = 540.0
margin_right = 1920.0
margin_bottom = 540.0
size_flags_horizontal = 3
custom_constants/margin_right = 720
custom_constants/margin_left = 720
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BotchButton" type="Button" parent="CanvasLayer/BotchInfoContainer/VBoxContainer/MarginContainer"]
visible = false
margin_left = 720.0
margin_right = 1200.0
margin_bottom = 108.0
size_flags_horizontal = 3
custom_styles/hover = ExtResource( 17 )
custom_styles/pressed = ExtResource( 17 )
custom_styles/focus = ExtResource( 17 )
custom_styles/disabled = ExtResource( 17 )
custom_styles/normal = ExtResource( 17 )
custom_fonts/font = ExtResource( 13 )
text = "OK"

[node name="DayTimer" type="Timer" parent="."]
one_shot = true

[node name="DrBook" type="CanvasLayer" parent="."]
layer = 2

[node name="DrBook" parent="DrBook" instance=ExtResource( 14 )]
pause_mode = 2
visible = false
[connection signal="pressed" from="CanvasLayer/DayEndScreen/MarginContainer/MarginContainer/VBoxContainer/HBoxContainer/ShopButton" to="." method="_on_ShopButton_pressed"]
[connection signal="pressed" from="CanvasLayer/DayEndScreen/MarginContainer/MarginContainer/VBoxContainer/HBoxContainer/NextDay" to="." method="_on_NextDay_pressed"]
[connection signal="pressed" from="CanvasLayer/ShopContainer/MarginContainer/VBoxContainer/HBoxContainer/MarginContainer/BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="mouse_entered" from="CanvasLayer/DrBook/Area2D" to="." method="_on_drbook_entered"]
[connection signal="mouse_exited" from="CanvasLayer/DrBook/Area2D" to="." method="_on_drbook_exited"]
[connection signal="pressed" from="CanvasLayer/BotchInfoContainer/VBoxContainer/MarginContainer/BotchButton" to="." method="_on_BotchButton_pressed"]
[connection signal="timeout" from="DayTimer" to="." method="_on_DayTimer_timeout"]
